<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/design_default_color_primary"
    tools:context=".Recuperar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mail1"
            android:text="@string/mail_recovery1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mail2"
            android:text="@string/mail_recovery2"/>


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_usuario"
        android:inputType="text"
        android:hint="@string/txt_user"
        android:background="@color/blanco_clear10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blanco_clear20"
        android:text="@string/txt_recuperar1"
        android:paddingHorizontal="5dp"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="generar código de recuperación"
        android:onClick="coderandom"
        android:id="@+id/random"/>








        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_codigo"
        android:inputType="text"
        android:background="@color/blanco_clear10"
        android:hint="@string/txt_rec_code"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_pass1"
        android:inputType="textPassword"
        android:hint="@string/txt_new_password"
        android:background="@color/blanco_clear10"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rec_pass2"
        android:inputType="textPassword"
        android:hint="@string/txt_confirm_new_password"
        android:background="@color/blanco_clear10"
        />







    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_change_password"
        android:onClick="cambiarPassword"
        android:id="@+id/re_pass"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/t1"
        />


</LinearLayout>