<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fm1_0"
    tools:context=".Configuracion">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_change_password"

            android:textStyle="bold"
            android:textSize="25dp"

            />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_insert_password"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"

        android:layout_marginLeft="40dp"
        android:background="@color/blanco_clear20"
        />

    <EditText
        android:id="@+id/old_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/blanco_clear10"
        android:hint="@string/txt_password"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/txt_insert_new_password"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"
        android:background="@color/blanco_clear20"/>

    <EditText
        android:id="@+id/new_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/txt_new_password"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/blanco_clear10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirm_new_password"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:background="@color/blanco_clear20"
        />

    <EditText
        android:id="@+id/new_pass2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/txt_new_password"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/blanco_clear10"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/changepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:textSize="19dp"
            android:onClick="cambiarPassword"
            android:text="@string/bt_change"/>

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />

    </LinearLayout>


</LinearLayout>