<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fm1_1"
    tools:context=".FormularioRegistro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="2dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/titulo_img_t" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/e1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:background="@color/blanco_clear10"
            android:hint="@string/txt_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/e2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="4dp"
            android:background="@color/blanco_clear10"
            android:hint="@string/txt_last_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/e3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="4dp"
            android:background="@color/blanco_clear10"
            android:hint="@string/txt_phone"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/e4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="4dp"
            android:background="@color/blanco_clear10"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/e5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="4dp"
            android:background="@color/blanco_clear10"
            android:hint="@string/txt_password_confirm"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:text="@string/txt_usage_policies"
            android:textSize="13sp"
            android:background="@color/blanco_clear20"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="metodopolitica"
            android:text="@string/bt_policies"/>

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="278dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <fragment
                android:id="@+id/fragment"
                android:name="com.pchronos.septimaappjava.Fragmento1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1" />


        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="crearUsuario"
            android:text="@string/bt_sign_in"/>

        <TextView
            android:id="@+id/testado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black" />

    </LinearLayout>


</LinearLayout>